k8s_web/dbapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dbapp-deployment
  namespace: web
  labels:
    app: dbapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dbapp
  template:
    metadata:
      labels:
        app: dbapp
    spec:
      containers:
        - name: dbapp
          image: gcr.io/mlops-476802/dbapp:$SHORT_SHA
          imagePullPolicy: Always
          ports:
            - containerPort: 5002
          resources:
            requests:
              cpu: "50m"    # Reduced from 100m
              memory: "64Mi" # Reduced from 128Mi
            # limits:
            #   cpu: "200m"    # Reduced from 500m
            #   memory: "128Mi" # Reduced from 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: dbapp
  namespace: web
  labels:
    app: dbapp
spec:
  type: ClusterIP
  selector:
    app: dbapp
  ports:
    - name: http
      port: 80          # Exposed inside the cluster
      targetPort: 5002  # Container port
