k8s_web/mlapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlapp-deployment
  namespace: web
  labels:
    app: mlapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mlapp
  template:
    metadata:
      labels:
        app: mlapp
    spec:
      containers:
        - name: mlapp
          image: gcr.io/mlops-476802/mlapp:$SHORT_SHA
          imagePullPolicy: Always
          ports:
            - containerPort: 5001
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            # limits:
            #   cpu: "300m"
            #   memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: mlapp
  namespace: web
  labels:
    app: mlapp
spec:
  type: ClusterIP
  selector:
    app: mlapp
  ports:
    - name: http
      port: 80          # Cluster-level access port
      targetPort: 5001  # Maps to the container's exposed port
